--- a/style.css
+++ b/style.css
@@ -1,46 +1,67 @@
-.game-board{
+.game-board {
     size: 500px;
     align-items: center;
-    
+
 }
 
-h1{
+h1 {
     color: red;
 }
 
-body{
+body {
     background-color: lightblue;
     text-align: center;
 }
 
-.reset-btn{
+.reset-btn {
     border-radius: 25px;
     margin-top: 10px;
+
 }
 
 .game-board td {
-    width: 80px;  
-    height: 80px; 
+    width: 80px;
+    height: 80px;
     text-align: center;
     vertical-align: middle;
-    font-size: 24px; 
-    border: 1px solid black; 
+    font-size: 24px;
+    border: 1px solid black;
     cursor: pointer;
 
 }
 
-button{
+button {
     border-radius: 10px;
     padding: 10px;
     font-weight: bold;
 }
 
-.difficulty-easy{  
+.difficulty-easy {
     background-color: green;
 }
-.difficulty-medium{    
+
+.difficulty-medium {
     background-color: yellow;
 }
-.difficulty-hard{  
+
+.difficulty-hard {
     background-color: red;
+}
+
+.cell {
+    cursor: pointer;
+}
+
+.bomb {
+    transition-duration: 300ms;
+    background-color: red;
+    width: 80px;
+    height: 80px;
+}
+
+.not-bomb {
+    transition-duration: 300ms;
+    background-color: green;
+    width: 80px;
+    height: 80px;
 }
